Most of Referrals working

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <div class="login-page">
     <div class="form">
+        <div align="center">
+            <img src="00001.jpg" width="100" height="100">
+        </div>
         <form action="login.php" method="get" class="login-form">
             <input type="text" placeholder="username" name="login"/>
             <input type="password" placeholder="password" name="password"/>
